Version 17.28 - 26 April 2016

- adapt to new brltty
- drop support for MIPS
- fix detecting running under Qemu
- fix installing packages when having a numeric pad
- recognize new kernel-4.6 drivers

Version 17.27 - 23 April 2016

- add 'qemu' flag for rpmsrate
- exclude 2 Xorg libraries on ARM

Version 17.26.1 - 8 April 2016

- just ignore kernel options
- drakx-in-chroot:
  o enable to control strace behaviour

Version 17.26 - 3 April 2016

- add minimal CSD support (mga#17702)

Version 17.25 - 1 April 2016

- partionning:
  o fix detecting nvme devices as block devices
  o fix displaying partitions when there's only one disk
    (and the resulting crash: mga#18076)

Version 17.24 - 23 March 2016

- fix build on ia32
- add 'virtualbox' & 'vmware' flags for rpmsrate
- use systemd-detect-virt for detecting virtualization technology

Version 17.23 - 22 March 2016

- do not include twice webkit2gtk library
- remove swrast (too big just to fix a gtk+ warning...)

Version 17.21 - 21 March 2016

- load evdev (thus fixing a crash)
- load psmouse (it is now modular)
- use WebKit2 instead of WebKit1 for displaying help content (mga#15031)

Version 17.20 - 18 March 2016

- prevent slow boot on first boot (mga#16684)
- partionning:
  o fix partitions not initially displayed (mga#17564)

Version 17.19 - 24 February 2016

- detect nvme devices as block devices (mga#17743)
- detect partitions on nvme devices (mga#17743)

Version 17.18.1 - 10 February 2016

- bootloader:
  o add support for grub2-text too (mga#9431)
- partionning:
  o check ESP has the right fs type (mga#16246)
  o check that ESP mount point actually is an ESP

Version 17.17 - 29 January 2016

- fix hidden cursor (mga#17470)

Version 17.16 - 21 January 2016

- Add ARM support in perl-install
- options:
  o silent a warning bout BOOT_IMAGE option
- partionning:
  o fix crash (mga#17484)

Version 17.14 - 11 January 2016

- do not warn about kernel options when parsing drakx options