@@ -1,0 +1,6 @@
+/* CSD for windows: */
+window, .window-frame {
+    border: solid 1px alpha(black, 0.75);
+    padding: 20px;
+}
+
