@@ -29,8 +29,3 @@
   background-color: #2859B5;
   color: #FFD200;
 }
-
-window, .window-frame {
-    border: solid 1px alpha(black, 0.75);
-    padding: 20px;
-}
