@@ -1,3 +1,5 @@
+- make CSD support available to forked processes (mga#18332)
+
 Version 17.28 - 26 April 2016
 
 - adapt to new brltty
